[package]
name = "bc-shamir"
version = "0.8.0"
edition = "2024"
description = "Shamir's Secret Sharing (SSS) for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-shamir-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-shamir"
keywords = ["cryptography"]                                        # Up to five
categories = ["cryptography"]                                      # https://crates.io/category_slugs

[dependencies]
bc-rand = { git = "https://github.com/willrnch/bc-rand-rust.git", rev = "f6c187b211a39f159567fc6981d1676f015f88d7" }
bc-crypto = { git = "https://github.com/willrnch/bc-crypto-rust.git", rev = "c20a724259c7b3f4d8ec050035346a1f2262ca88" }

thiserror = "^2.0"

[dev-dependencies]
hex-literal = "^0.4.1"
hex = "^0.4.3"
version-sync = "^0.9.0"
rand = "^0.9.2"
