[package]
name = "bc-shamir"
version = "0.12.0"
edition = "2024"
description = "Shamir's Secret Sharing (SSS) for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-shamir-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-shamir"
keywords = ["cryptography"]                                        # Up to five
categories = ["cryptography"]                                      # https://crates.io/category_slugs

[dependencies]
bc-rand = "^0.4.2"
bc-crypto = "^0.13.0"

thiserror = "^2.0"

[dev-dependencies]
hex-literal = "^1.1.0"
hex = "^0.4.3"
version-sync = "^0.9.0"
rand = "^0.9.2"
